Get visit plots working again

--- a/pipelines/visitQualityExtended.yaml
+++ b/pipelines/visitQualityExtended.yaml
@@ -2,6 +2,6 @@ description: |
   Tier2 plots and metrics to assess visit quality
 tasks:
   catalogMatchVisit:
-    class: lsst.analysis.tools.tasks.catalogMatch.CatalogMatchVisitTask
+    class: lsst.analysis.tools.tasks.astrometricCatalogMatch.AstrometricCatalogMatchVisitTask
   refCatSourceVisit:
     class: lsst.analysis.tools.tasks.refCatSourceAnalysis.RefCatSourceAnalysisTask
