--- a/pipelines/matchedVisitQualityCore.yaml
+++ b/pipelines/matchedVisitQualityCore.yaml
@@ -13,11 +13,10 @@ tasks:
       # atools.stellarAstrometricResidualStdDevDec: StellarAstrometricResidualStdDevDecFocalPlanePlot
       atools.stellarAstrometricRepeatability1: AstrometricRelativeRepeatability
       atools.stellarAstrometricRepeatability1.xValue: 1
-      atools.stellarAstrometricRepeatability1.fluxType: test
       atools.stellarAstrometricRepeatability1.process.calculateActions.rms.annulus: 5
       atools.stellarAstrometricRepeatability2: AstrometricRelativeRepeatability
-      #atools.stellarAstrometricRepeatability2.xValue: 2
-      #atools.stellarAstrometricRepeatability2.process.calculateActions.rms.annulus: 20
+      atools.stellarAstrometricRepeatability2.xValue: 2
+      atools.stellarAstrometricRepeatability2.process.calculateActions.rms.annulus: 20
       atools.stellarAstrometricRepeatability3: AstrometricRelativeRepeatability
       atools.stellarAstrometricRepeatability3.xValue: 3
       atools.stellarAstrometricRepeatability3.process.calculateActions.rms.annulus: 200
