Return empty focalPlanePlot in case of no data

--- a/pipelines/matchedVisitQualityCore.yaml
+++ b/pipelines/matchedVisitQualityCore.yaml
@@ -6,10 +6,10 @@ tasks:
     config:
       connections.outputName: matchedVisitCore
       atools.stellarPhotometricRepeatability: StellarPhotometricRepeatability
-      # atools.stellarPhotometricResiduals: StellarPhotometricResidualsFocalPlane
-      # atools.stellarAstrometricResidualsRA: StellarAstrometricResidualsRAFocalPlanePlot
-      # atools.stellarAstrometricResidualsDec: StellarAstrometricResidualsDecFocalPlanePlot
-      # atools.stellarAstrometricResidualStdDevRA: StellarAstrometricResidualStdDevRAFocalPlanePlot
-      # atools.stellarAstrometricResidualStdDevDec: StellarAstrometricResidualStdDevDecFocalPlanePlot
+      atools.stellarPhotometricResiduals: StellarPhotometricResidualsFocalPlane
+      atools.stellarAstrometricResidualsRA: StellarAstrometricResidualsRAFocalPlanePlot
+      atools.stellarAstrometricResidualsDec: StellarAstrometricResidualsDecFocalPlanePlot
+      atools.stellarAstrometricResidualStdDevRA: StellarAstrometricResidualStdDevRAFocalPlanePlot
+      atools.stellarAstrometricResidualStdDevDec: StellarAstrometricResidualStdDevDecFocalPlanePlot
       python: |
         from lsst.analysis.tools.atools import *
